--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150;
 }
 .halfwidth{
     width: 50%;
@@ -32,4 +33,9 @@ section{
 .Top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.drembig{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right;
 }
